--- a/modulos/modulo-1-introducao.ipynb
+++ b/modulos/modulo-1-introducao.ipynb
@@ -1,169 +1,259 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"../imagens/1.png\">\n",
-    "\n",
-    "## Revisando o conteúdo da semana!"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.10"
+    },
+    "colab": {
+      "name": "modulo-1-introducao.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 - Em uma instrução print, o que acontece se você omitir um dos parênteses ou ambos?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2 - O que acontece se puser um sinal de mais antes de um número? E se escrever assim: 2++2?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3 - O que acontece se você tentar usar 02 isso no Python?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4 - Quantos segundos há em 42 minutos e 42 segundos?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5 - Vimos que n = 42 é legal. E 42 = n?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6 - Ou x = y = 1?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "7 - O que acontece se você puser um ponto e vírgula no fim de uma instrução no Python? E um ponto?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "8 - Em notação matemática é possível multiplicar x e y desta forma: xy. O que acontece se você tentar fazer o mesmo no Python?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Quais são as outras formas de praticar esses conceitos?\n",
-    "\n",
-    "<img src=\"https://media.giphy.com/media/2wS8Hh619rZvvf95op/giphy.gif\" align=\"left\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<Adicionar atividade de sua preferência para aplicação dos conceitos>"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c62Oqi93ea5r",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src=\"https://github.com/jessicacardoso1/o-py-o/blob/master/imagens/1.png?raw=1\">\n",
+        "\n",
+        "## Revisando o conteúdo da semana!\n",
+        "\n",
+        "# Jéssica Cardoso"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qndT911Xea5v",
+        "colab_type": "text"
+      },
+      "source": [
+        "1 - Em uma instrução print, o que acontece se você omitir um dos parênteses ou ambos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GwRDqvmuea51",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aBmN3BRUea6N",
+        "colab_type": "text"
+      },
+      "source": [
+        "2 - O que acontece se puser um sinal de mais antes de um número? E se escrever assim: 2++2?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vcjIYnqPea6V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fhxL0o3lea68",
+        "colab_type": "text"
+      },
+      "source": [
+        "3 - O que acontece se você tentar usar 02 isso no Python?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BrBZPhcHea7B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Xk-WvhQea7b",
+        "colab_type": "text"
+      },
+      "source": [
+        "4 - Quantos segundos há em 42 minutos e 42 segundos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hw4lHF3Gea7l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rmnhAgxaea8E",
+        "colab_type": "text"
+      },
+      "source": [
+        "5 - Vimos que n = 42 é legal. E 42 = n?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vp7fHDmiea8H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w_z79n3qea8Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "6 - Ou x = y = 1?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3KqPFFZHea8e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9h_QlhSyea9C",
+        "colab_type": "text"
+      },
+      "source": [
+        "7 - O que acontece se você puser um ponto e vírgula no fim de uma instrução no Python? E um ponto?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q3Xwpvh8ea9J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dOWR0l72ea90",
+        "colab_type": "text"
+      },
+      "source": [
+        "8 - Em notação matemática é possível multiplicar x e y desta forma: xy. O que acontece se você tentar fazer o mesmo no Python?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "USixeNwoea96",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bIWldozJea-t",
+        "colab_type": "text"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8S6bPugcea-2",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Quais são as outras formas de praticar esses conceitos?\n",
+        "\n",
+        "<img src=\"https://media.giphy.com/media/2wS8Hh619rZvvf95op/giphy.gif\" align=\"left\">"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XX1KQ6VBea_K",
+        "colab_type": "text"
+      },
+      "source": [
+        "<Adicionar atividade de sua preferência para aplicação dos conceitos>"
+      ]
+    }
+  ]
 }
