--- a/modulos/modulo-1-introducao.ipynb
+++ b/modulos/modulo-1-introducao.ipynb
@@ -34,9 +34,7 @@
       "source": [
         "<img src=\"https://github.com/jessicacardoso1/o-py-o/blob/master/imagens/1.png?raw=1\">\n",
         "\n",
-        "## Revisando o conteúdo da semana!\n",
-        "\n",
-        "# Jéssica Cardoso"
+        "## Revisando o conteúdo da semana!\n"
       ]
     },
     {
