--- a/modulos/modulo-1-introducao.ipynb
+++ b/modulos/modulo-1-introducao.ipynb
@@ -21,15 +21,25 @@
     },
     "colab": {
       "name": "modulo-1-introducao.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "c62Oqi93ea5r",
+        "id": "view-in-github",
         "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jessicacardoso1/o-py-o/blob/master/modulos/modulo-1-introducao.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c62Oqi93ea5r"
       },
       "source": [
         "<img src=\"https://github.com/jessicacardoso1/o-py-o/blob/master/imagens/1.png?raw=1\">\n",
@@ -40,8 +50,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qndT911Xea5v",
-        "colab_type": "text"
+        "id": "qndT911Xea5v"
       },
       "source": [
         "1 - Em uma instrução print, o que acontece se você omitir um dos parênteses ou ambos?"
@@ -51,20 +60,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "GwRDqvmuea51",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "54455d8a-2150-4dbe-d981-cab32a2c49ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "print"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function print>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aBmN3BRUea6N",
-        "colab_type": "text"
+        "id": "aBmN3BRUea6N"
       },
       "source": [
         "2 - O que acontece se puser um sinal de mais antes de um número? E se escrever assim: 2++2?"
@@ -74,20 +98,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "vcjIYnqPea6V",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "57917174-020c-4dbf-f92f-1a8ae478c6fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "+2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fhxL0o3lea68",
-        "colab_type": "text"
+        "id": "fhxL0o3lea68"
       },
       "source": [
         "3 - O que acontece se você tentar usar 02 isso no Python?"
@@ -97,20 +136,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "BrBZPhcHea7B",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "e7c7301f-a611-4b9f-ce78-b12c0b2b0681",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
       "source": [
-        ""
+        "02"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-0908cbeb2fbd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    02\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1Xk-WvhQea7b",
-        "colab_type": "text"
+        "id": "1Xk-WvhQea7b"
       },
       "source": [
         "4 - Quantos segundos há em 42 minutos e 42 segundos?"
@@ -120,20 +170,33 @@
       "cell_type": "code",
       "metadata": {
         "id": "hw4lHF3Gea7l",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "a59408a7-4ea2-47e3-c322-30e402845372",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "minuto = 60\n",
+        "segundos_total = 42*minuto\n",
+        "\n",
+        "print(\"existem {} segundos em 42 minutos e 42 segundos\".format(segundos_total + 42))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "existem 2562 segundos em 42 minutos e 42 segundos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rmnhAgxaea8E",
-        "colab_type": "text"
+        "id": "rmnhAgxaea8E"
       },
       "source": [
         "5 - Vimos que n = 42 é legal. E 42 = n?"
@@ -143,20 +206,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "Vp7fHDmiea8H",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "1728d314-9acd-4d9a-b252-ef97e138310d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
       "source": [
-        ""
+        "42 = n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-f0c37ed646fc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    42 = n\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w_z79n3qea8Y",
-        "colab_type": "text"
+        "id": "w_z79n3qea8Y"
       },
       "source": [
         "6 - Ou x = y = 1?\n"
@@ -166,20 +240,33 @@
       "cell_type": "code",
       "metadata": {
         "id": "3KqPFFZHea8e",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "4403211c-3af7-40b7-c8d8-38ea7f09341d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
-        ""
+        "x = y = 1\n",
+        "print(x)\n",
+        "print(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9h_QlhSyea9C",
-        "colab_type": "text"
+        "id": "9h_QlhSyea9C"
       },
       "source": [
         "7 - O que acontece se você puser um ponto e vírgula no fim de uma instrução no Python? E um ponto?"
@@ -189,20 +276,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q3Xwpvh8ea9J",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "27068b14-a5f0-46b2-8da4-be0df4a1b44f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
-        ""
+        "x = 10;\n",
+        "c = 1.\n",
+        "\n",
+        "print(c)\n",
+        "print(x)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "oi\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dOWR0l72ea90",
-        "colab_type": "text"
+        "id": "dOWR0l72ea90"
       },
       "source": [
         "8 - Em notação matemática é possível multiplicar x e y desta forma: xy. O que acontece se você tentar fazer o mesmo no Python?"
@@ -212,20 +314,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "USixeNwoea96",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "2fd8d738-a2e9-4f94-ae90-7f07fa714255",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        }
       },
       "source": [
-        ""
+        "x = 2\n",
+        "y = 3\n",
+        "print(xy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-5a621514a8b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'xy' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bIWldozJea-t",
-        "colab_type": "text"
+        "id": "bIWldozJea-t"
       },
       "source": [
         "---"
@@ -234,8 +352,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8S6bPugcea-2",
-        "colab_type": "text"
+        "id": "8S6bPugcea-2"
       },
       "source": [
         "## Quais são as outras formas de praticar esses conceitos?\n",
@@ -246,8 +363,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XX1KQ6VBea_K",
-        "colab_type": "text"
+        "id": "XX1KQ6VBea_K"
       },
       "source": [
         "<Adicionar atividade de sua preferência para aplicação dos conceitos>"
