--- a/modulos/modulo-7-manipulacao-arquivos.ipynb
+++ b/modulos/modulo-7-manipulacao-arquivos.ipynb
@@ -64,21 +64,16 @@
       },
       "source": [
         "arquivo = open('arquivo1.txt', 'w')\n",
-        "arquivo.write('padrao')\n",
+        "arquivo.write('oi padrao')\n",
         "arquivo.close()"
       ],
-      "execution_count": 37,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fw5kHoYqA3Gg",
-        "outputId": "800d9a88-529a-4979-ae5e-0492feee77d4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 316
-        }
+        "id": "Fw5kHoYqA3Gg"
       },
       "source": [
         "msg1 = 'padrao'\n",
@@ -87,56 +82,72 @@
         "arq2 = \"arquivo2.txt \"\n",
         "\n",
         "def sed(padrao, substituir, arq1, arq2):\n",
+        "    try:\n",
+        "        arquivo1 = open(arq1, 'r')\n",
+        "        arquivo2 = open(arq2, 'w')\n",
         "\n",
-        "    arquivo1 = open(arq1, 'r')\n",
-        "    arquivo2 = open(arq2, 'w')\n",
-        "\n",
-        "    for line in arquivo1:\n",
-        "        line = arquivo1.replace(padrao, substituir)\n",
-        "        arquivo2.write(line)\n",
-        "      \n",
-        "    arquivo1.close()\n",
-        "    arquivo2.close()\n",
+        "        for linha in arquivo1:\n",
+        "            linha = linha.replace(padrao, substituir)\n",
+        "            arquivo2.write(linha)\n",
+        "          \n",
+        "        arquivo1.close()\n",
+        "        arquivo2.close()\n",
+        "    except:\n",
+        "      print('deu merda')\n",
         "\n",
         "sed(msg1, msg2, arq1, arq2)"
       ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-44-d441a67271e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0marquivo2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0msed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marq1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marq2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-44-d441a67271e2>\u001b[0m in \u001b[0;36msed\u001b[0;34m(padrao, substituir, arq1, arq2)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marquivo1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marquivo1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpadrao\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubstituir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0marquivo2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: '_io.TextIOWrapper' object has no attribute 'replace'"
-          ]
-        }
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SP4-2T7PA3Gw"
+      },
+      "source": [
+        "---\n",
+        "\n",
+        "## Quais são as outras formas de praticar esses conceitos?\n",
+        "\n",
+        "<img src=\"https://media.giphy.com/media/45dPIJaV9AYOZUZ0nQ/giphy.gif\" align=\"left\">\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ipl4PI5MA3Gx"
+      },
+      "source": [
+        "<Adicionar atividade de sua preferência para aplicação dos conceitos>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Rpn0gxqzW3sE"
+        "id": "2tOO2PpXIpdz",
+        "outputId": "ab647c31-9058-489d-abbf-94a5fbc966b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "try:\n",
+        "    arquivo = open('/sample_data')\n",
+        "except:\n",
+        "    print('deu merda')"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6ZnYU7ZxTtPj"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "deu merda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -180,33 +191,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2tOO2PpXIpdz",
-        "outputId": "ab647c31-9058-489d-abbf-94a5fbc966b1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "try:\n",
-        "    arquivo = open('/sample_data')\n",
-        "except:\n",
-        "    print('deu merda')"
-      ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "deu merda\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "01frARQyJptE"
       },
       "source": [
@@ -219,28 +203,6 @@
       ],
       "execution_count": 22,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SP4-2T7PA3Gw"
-      },
-      "source": [
-        "---\n",
-        "\n",
-        "## Quais são as outras formas de praticar esses conceitos?\n",
-        "\n",
-        "<img src=\"https://media.giphy.com/media/45dPIJaV9AYOZUZ0nQ/giphy.gif\" align=\"left\">\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ipl4PI5MA3Gx"
-      },
-      "source": [
-        "<Adicionar atividade de sua preferência para aplicação dos conceitos>"
-      ]
     }
   ]
 }
