--- a/modulos/modulo-7-manipulacao-arquivos.ipynb
+++ b/modulos/modulo-7-manipulacao-arquivos.ipynb
@@ -93,7 +93,7 @@
         "        arquivo1.close()\n",
         "        arquivo2.close()\n",
         "    except:\n",
-        "      print('deu merda')\n",
+        "      print('deu ruim')\n",
         "\n",
         "sed(msg1, msg2, arq1, arq2)"
       ],
@@ -136,7 +136,7 @@
         "try:\n",
         "    arquivo = open('/sample_data')\n",
         "except:\n",
-        "    print('deu merda')"
+        "    print('deu ruim')"
       ],
       "execution_count": 19,
       "outputs": [
